examples/test/testpolicy17808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17808
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key13: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value40
          key26: value25
          key13: value49
      podSelector:
        matchLabels:
          key1: value39
          key48: value43
          key47: value4
